@@ -18,6 +18,7 @@ Cobbler CHANGELOG
 - (FEAT) new snippet for RHN Hosted: keep RHN keys between reinstalls
 - (FEAT) allow per_distro snippets in addition to per_profile/per_system
 - (BUGF) don't add port number to http_server if it's 80.
+- (FEAT) replicate is now mtime aware
 
 - placeholder - 1.6.4
 - (BUGF) empty nameserver search paths now don't screw up resolv.conf
